test cases fix